--- a/src/app/features/admin-layout/admin-layout.component.html
+++ b/src/app/features/admin-layout/admin-layout.component.html
@@ -1,23 +1,21 @@
-
-
-<div class="h-screen w-screen flex overflow-hidden relative">
+<div class="relative flex w-screen h-screen overflow-hidden">
   <!-- Sidebar -->
   <app-sidebar [role]="role"></app-sidebar>
 
-  <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
-    <app-lottie-animation class=" w-72 h-72 2xl:w-96 2xl:h-96 animate-pop" animation="loader"></app-lottie-animation>
-    <div *ngIf="!showUploadProgress()" class="tracking-wider text-xl animate-bounce animate-pop">Please Wait</div>
-    <div *ngIf="showUploadProgress()" class="tracking-wider text-xl animate-bounce animate-pop">Uploading File ... ({{showUploadProgress()}})%</div>
+  <!-- Loading Overlay -->
+  <div *ngIf="isLoading" class="absolute z-50 flex flex-col items-center justify-center w-full h-full overflow-hidden bg-white cursor-wait">
+    <app-lottie-animation class="w-72 h-72 2xl:w-96 2xl:h-96 animate-pop" animation="loader"></app-lottie-animation>
+    <div *ngIf="!showUploadProgress()" class="text-xl tracking-wider animate-bounce animate-pop">Please Wait</div>
+    <div *ngIf="showUploadProgress()" class="text-xl tracking-wider animate-bounce animate-pop">Uploading File ... ({{showUploadProgress()}})%</div>
   </div>
-  <!-- Main Content -->
-  <div class="flex-1 flex flex-col overflow-auto bg-gray-100">
 
-    <app-header > </app-header>
-    <div class="w-full flex-1 py-6 px-6 2xl:px-14">
+  <!-- Main Content -->
+  <div class="relative flex flex-col flex-1 overflow-auto bg-gray-100">
+    <app-header class="z-30"></app-header>
+    <div class="flex-1 w-full px-6 py-6 2xl:px-14">
       <router-outlet></router-outlet>
     </div>
   </div>
+
   <app-snackbar></app-snackbar>
 </div>
-
-
