--- a/src/app/features/auth/login-layout/login-layout.component.html
+++ b/src/app/features/auth/login-layout/login-layout.component.html
@@ -6,8 +6,6 @@
       src="https://cdn.builder.io/api/v1/image/assets/TEMP/2cba961d66b8f4ac84a7ea33550174a78410d2d66f219587d45cabb6030b81fa?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
       class="fixed inset-0 object-cover w-full h-full"
       alt="Background image of the queueing management system" />
-
-
   <!-- Dark overlay with opacity adjustment -->
   <div class="fixed inset-0 bg-black bg-opacity-40"></div>
 
@@ -38,10 +36,10 @@
           <div class="absolute top-20 left-20 max-md:left-5">
             <header class="flex items-center gap-3 text-3xl font-bold text-white max-md:text-2xl">
               <img loading="lazy"
-              src="./assets/logo/vsu.png"
+              [src]="config.assets.logo"
               class="object-contain w-[45px] aspect-[0.97]"
                    alt="Visayas State University logo" />
-              <h1 class="w-auto">VISAYAS STATE UNIVERSITY</h1>
+              <h1 class="w-auto">{{config.texts.title.toUpperCase()}}</h1>
             </header>
           </div>
 
@@ -78,7 +76,7 @@
                 <span
                 (click)="openExternalMap()"
                 class="cursor-pointer"
-                >Visca, Baybay City, Leyte</span>
+                >{{config.texts.location}}</span>
               </div>
             </address>
           </div>
@@ -126,7 +124,7 @@
 
                 <div 
                   (click)="login()"
-                        class="w-full py-3 cursor-pointer text-lg font-bold flex justify-center text-white transition duration-200 bg-green-700 rounded-lg shadow-md hover:bg-green-600">
+                        class="w-full py-3 cursor-pointer text-lg font-bold flex justify-center text-white transition duration-200 bg-[var(--primary)] rounded-lg shadow-md hover:bg-[var(--primary-hover)]">
                   LOG IN
               </div>
 
