--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <div
-  class="h-full bg-green-950 text-white transition-all duration-500 ease-in-out flex flex-col shadow-lg overflow-hidden"
+  class="h-full bg-[var(--primary)] text-white transition-all duration-500 ease-in-out flex flex-col shadow-lg overflow-hidden"
   [ngClass]="{
     'w-72': isExpanded,
     'w-16': !isExpanded && !isMobile,
