--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@
   /* New Primary Palette */
   --primary: #2F4A2C;
   --primary-dark: #1F3B1F; /* Darker shade */
-  --primary-light: #4B6E4B; /* Lighter shade */
+  --primary-light: #cde4cd; /* Lighter shade */
   --primary-hover: #3B5B3B; /* Hover color */
 
   /* New Secondary Palette */
