--- a/src/app/features/admin-layout/department-management/department-management.component.html
+++ b/src/app/features/admin-layout/department-management/department-management.component.html
@@ -19,12 +19,12 @@
           <button 
    
           *ngFor="let department of departments; let i = index" 
-          class="transition-all hover:scale-110 group bg-white border-green-800 hover:bg-green-900 hover:text-white hover:border-green-500   h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
-  
-            <!-- Header -->
-            <div class="flex gap-4 items-center">
-              <!-- Lottie Container -->
-              <div class="w-16 h-12 p-2 rounded-lg bg-green-200 transition-all group-hover:bg-yellow-200">
+          class="group transition-all hover:scale-110   bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)]  h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed">
+
+          <!-- Header -->
+          <div class="flex gap-4 items-center">
+            <!-- Lottie Container -->
+            <div class="transition-all w-16 h-12 p-2 rounded-lg bg-[var(--primary-light)] group-hover:bg-yellow-200">
                 <app-lottie-animation animation="building"></app-lottie-animation>
               </div>
               <div class="font-medium  tracking-wide text-xl flex items-center gap-2">
