--- a/src/app/features/admin-layout/terminal-management/terminal-management.component.html
+++ b/src/app/features/admin-layout/terminal-management/terminal-management.component.html
@@ -18,7 +18,7 @@
       <!-- Item -->
       <button 
       (click)="selectDivision(division)"
-      class=" {{selectedDivision == division.id ? 'bg-green-900 text-white':'bg-white'}}  tracking-wide h-12 rounded-lg shadow-md hover:bg-green-900 hover:text-white cursor-pointer flex items-center justify-between px-4 font-medium" 
+      class=" {{selectedDivision == division.id ? 'bg-[var(--primary-dark)] text-white':'bg-white'}}  tracking-wide h-12 rounded-lg shadow-md hover:bg-[var(--primary)] hover:text-white cursor-pointer flex items-center justify-between px-4 font-medium" 
       *ngFor="let division of divisions">
         {{division.name.toUpperCase()}} <span  class="material-icons hidden 2xl:block"> keyboard_arrow_right </span>
       </button>
@@ -29,12 +29,12 @@
       <div class=" grid grid-cols-3 px-3 py-3 gap-3"> 
         <button 
         *ngFor="let terminal of terminals; let i = index" 
-        class="group transition-all hover:scale-110  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-green-800 hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
+        class="group transition-all hover:scale-110  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)] '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
 
           <!-- Header -->
           <div class="flex gap-4 items-center">
             <!-- Lottie Container -->
-            <div class="transition-all w-16 h-12 p-2 rounded-lg bg-green-200 group-hover:bg-yellow-200">
+            <div class="transition-all w-16 h-12 p-2 rounded-lg bg-[var(--primary-light)] group-hover:bg-yellow-200">
               <app-lottie-animation animation="computer"></app-lottie-animation>
             </div>
             <div transition-all class="w-5 h-5 rounded-full {{statusMap[terminal.status]}} bottom-4 right-4"></div>
