--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -12,11 +12,12 @@
           <button 
           (click)="selectCounter(terminal)"
           *ngFor="let terminal of terminals; let i = index" 
-          class="group transition-all hover:scale-110  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-green-800 hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
-            <!-- Header -->
-            <div class="flex gap-4 items-center">
-              <!-- Lottie Container -->
-              <div class="w-16 h-12 p-2 rounded-lg bg-green-200 group-hover:bg-yellow-200">
+          class="group transition-all hover:scale-110  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)] '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
+
+          <!-- Header -->
+          <div class="flex gap-4 items-center">
+            <!-- Lottie Container -->
+            <div class="transition-all w-16 h-12 p-2 rounded-lg bg-[var(--primary-light)] group-hover:bg-yellow-200">
                 <app-lottie-animation animation="computer"></app-lottie-animation>
               </div>
               <div class="w-5 h-5 rounded-full {{statusMap[terminal.status]}} bottom-4 right-4"></div>
