--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,9 @@
 :root {
-  /* Updated Primary Palette */
-  --primary: #003299; /* New primary color */
-  --primary-dark: #001f66; /* Darker shade */
-  --primary-light: #6699ff; /* Lighter shade */
-  --primary-hover: #0047b3; /* Hover color */
+  /* New Primary Palette */
+  --primary: #2F4A2C;
+  --primary-dark: #1F3B1F; /* Darker shade */
+  --primary-light: #cde4cd; /* Lighter shade */
+  --primary-hover: #3B5B3B; /* Hover color */
 
   /* New Secondary Palette */
   --secondary: #4B4E54; /* Example color */
