--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,9 @@
 :root {
   /* New Primary Palette */
-  --primary: #003299; /* Main Primary Color */
-  --primary-dark: #002266; /* Darker shade */
-  --primary-light: #0050b3; /* Lighter shade */
-  --primary-hover: #0040cc; /* Hover color */
+  --primary: #2F4A2C;
+  --primary-dark: #1F3B1F; /* Darker shade */
+  --primary-light: #cde4cd; /* Lighter shade */
+  --primary-hover: #3B5B3B; /* Hover color */
 
   /* New Secondary Palette */
   --secondary: #4B4E54; /* Example color */
