--- a/src/app/shared/profile/profile-layout/profile-layout.component.css
+++ b/src/app/shared/profile/profile-layout/profile-layout.component.css
@@ -7,7 +7,7 @@ body {
   height: 500px;
   padding: 8px;
   margin: 0 auto;
-  background-color: #064e3b; /* Dark Green */
+  background-color: var(--primary); /* Dark Green */
   border-radius: 5px;
   position: relative;
 }
@@ -16,7 +16,7 @@ body {
   content: "";
   width: 10px;
   display: block;
-  background-color: #033d2a; /* Darker Green */
+  background-color: var(--primary-dark); /* Darker Green */
   height: 140px;
   position: absolute;
   top: 130px;
@@ -53,7 +53,7 @@ body {
   height: 165px;
   border-radius: 8px;
   object-fit: cover;
-  border: 4px solid #064e3b;
+  border: 4px solid var(--primary);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 10;
 }
@@ -61,7 +61,7 @@ body {
 .triangle-bg-left {
   width: 60%;
   height: 40%;
-  background: linear-gradient(155deg, #105026 50%, transparent 50%);
+  background: linear-gradient(155deg, var(--primary) 50%, transparent 50%);
   position: absolute;
   top: 0;
   left: 0;
@@ -70,7 +70,11 @@ body {
 .triangle-bg-right {
   width: 100%;
   height: 32%;
-  background: linear-gradient(-155deg, #136e39 50%, transparent 50%);
+  background: linear-gradient(
+    -155deg,
+    var(--primary-light) 50%,
+    transparent 50%
+  );
   position: absolute;
   top: 0;
   right: 0;
@@ -78,7 +82,7 @@ body {
 
 .department {
   width: 100%;
-  background-color: #064e3b;
+  background-color: var(--primary);
   color: #fff;
   text-align: center;
   padding: 12px 0;
@@ -97,12 +101,12 @@ body {
 
 h2 {
   font-size: 18px;
-  color: #064e3b;
+  color: var(--primary);
 }
 h3 {
   font-size: 14px;
   font-weight: 300;
-  color: #064e3b;
+  color: var(--primary);
 }
 p {
   font-size: 10px;
@@ -111,7 +115,7 @@ p {
 }
 
 .id-card-hook {
-  background-color: #033d2a;
+  background-color: var(--primary-dark);
   width: 100px;
   margin: 0 auto;
   height: 20px;
@@ -131,20 +135,20 @@ p {
 .id-card-tag-strip {
   width: 60px;
   height: 50px;
-  background-color: #108643;
+  background-color: var(--primary-light);
   margin: 0 auto;
   border-radius: 5px;
   position: relative;
   top: 12px;
   z-index: 1;
-  border: 1px solid #11562a;
+  border: 1px solid var(--primary-dark);
 }
 .id-card-tag-strip:after {
   content: "";
   display: block;
   width: 100%;
   height: 1px;
-  background-color: #11562a;
+  background-color: var(--primary-dark);
   position: relative;
   top: 10px;
 }
@@ -153,7 +157,7 @@ p {
   height: 0;
   border-left: 140px solid transparent;
   border-right: 140px solid transparent;
-  border-top: 140px solid #108643;
+  border-top: 140px solid var(--primary-light);
   margin: -160px auto -30px auto;
   z-index: -50;
 }
@@ -169,4 +173,19 @@ p {
   position: relative;
   top: -98px;
   left: -40px;
+}
+
+.id-card-tag:before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 28px solid transparent; /* Slightly smaller to fit inside the main triangle */
+  border-right: 28px solid transparent; /* Slightly smaller to fit inside the main triangle */
+  border-top: 99px solid var(--primary); /* Slightly smaller to fit inside the main triangle */
+  margin: -85px auto -30px auto;
+  position: relative;
+  top: 1px; /* Adjusted to sit on top of the main triangle */
+  left: -28px; /* Adjusted to sit on top of the main triangle */
+  z-index: 1; /* Ensure it sits on top */
 }
