change variable colors

--- a/src/app/shared/profile/profile-layout/profile-layout.component.html
+++ b/src/app/shared/profile/profile-layout/profile-layout.component.html
@@ -9,7 +9,7 @@
     <div class="id-card-tag-strip"></div>
     <div class="id-card-hook"></div>
     <div class="relative bg-[--primary] id-card-holder">
-      <button class="absolute z-20 p-2 text-white bg-[--primary-dark] rounded-full top-3 left-3 hover:bg-[--primary-bg-light]"
+      <button class="absolute z-20 p-2 text-white bg-[--primary-dark] rounded-full top-3 left-3 hover:bg-[--primary]"
               (click)="editUser()">
         <!-- Inline SVG Edit Icon -->
         <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none">
