--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,9 +2,9 @@
   /* New Primary Palette */
   --primary: #2F4A2C;
   --primary-dark: #1F3B1F; /* Darker shade */
-  --primary-light: #06730C; /* Darker shade */
+  --primary-light: #416E41; /* Darker shade */
   --primary-hover: #3B5B3B; /* Hover color */
-  --primary-bg-light: #cde4cd; /* Lighter shade */
+  --primary-bg-light: #d9f2d9; /* Lighter shade */
 
   /* New Secondary Palette */
   --secondary: #4B4E54; /* Example color */
